initial commit for pull request

--- a/index.html
+++ b/index.html
@@ -438,11 +438,15 @@
    <button id="contact-me-button" class="menu-button" onclick="window.location.href='mailto:wxtership@xtremewx.com';">
     <i class="fa-solid fa-envelope"></i> Contact Me <i class="fa-solid fa-chevron-right"></i>
 </button>
-
+<button onclick="window.location.href='https://github.com/wxtership/xwdradar/issues/new?labels=bug'" class="menu-button">
+    <i class="fa-solid fa-bug"></i> Report a Bug <i class="fa-solid fa-external-link-alt"></i>
+</button>
+    <button onclick="window.location.href='https://github.com/wxtership/xwdradar/issues/new?labels=suggestion'" class="menu-button">
+    <i class="fa-solid fa-comments"></i> Suggestions <i class="fa-solid fa-external-link-alt"></i>
+</button>
         <button id="github-button" class="menu-button" onclick="window.open('https://github.com/wxtership/xwdradar', '_blank');">
-            <i class="fa-brands fa-github"></i> GitHub Page <i class="fa-solid fa-chevron-right"></i>
+            <i class="fa-brands fa-github"></i> Source <i class="fa-solid fa-external-link-alt"></i>
         </button>
-     
     </div>
 </div>
 
